# XMU-Rollcall-Bot

./: .env  .gitignore  CODE_OF_CONDUCT.md  README.md  auto_sign.py  config.json  info.txt
.github/workflows/: auto_sign_a.yml  python-publish.yml
XMU-Rollcall-Bot-CLI(v3)/: login.py  main.py  misc.py  tst_login.py  verify.py
XMUrcbot_win/: README.md
docs/: transplant.md
legacy/v3.0.1/: RUST_VERSION_README.txt  requirements.txt  verify.py
legacy/v3.0.1/rust_version/: Cargo.toml
legacy/v3.0.1/rust_version/src/: main.rs  misc.rs  ui.rs  verify.rs  xmu_login.rs
rollcall-bot_XMU/: main.py  main_gui.py  parse_rollcalls.py  verify.py
v3.0.1/: test_statusbar.py
website/: .gitignore
xmu-rollcall-cli/: .gitignore  PYPI_UPLOAD_GUIDE.md  README.md  pyproject.toml  setup.py
xmu-rollcall-cli/xmu_rollcall/: __init__.py  cli.py  config.py  monitor.py  qr_handler.py  verify.py
xmu-tronclass-client/: main.js  package-lock.json  package.json  preload.js
xmu-tronclass-client/bridge/: server.py
xmu-tronclass-client/renderer/: app.js  index.html  styles.css
xmu-tronclass-sdk/: .gitignore  README.md  pyproject.toml
xmu-tronclass-sdk/examples/: basic_usage.py  listen_push.py
xmu-tronclass-sdk/tronclass/: __init__.py  client.py  exceptions.py  models.py
xmu-tronclass-sdk/tronclass/api/: __init__.py  activities.py  assignments.py  courses.py  forum.py  notifications.py  profile.py  push.py  rollcall.py
xmu-tronclass-sdk/tronclass/auth/: __init__.py  base.py  xmu.py
