[package]
name = "xmu_rollcall_bot"
version = "3.1.0"
edition = "2021"
authors = ["KrsMt"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes = "0.8"
cbc = "0.1"
base64 = "0.21"
rand = "0.8"
regex = "1.10"
uuid = { version = "1.6", features = ["v4"] }
anyhow = "1.0"
futures = "0.3"
crossterm = "0.27"
chrono = "0.4"
